修复财务API字段格式问题：统一使用snake_case命名规范
- 修复financial.ts中/statistics接口的驼峰字段命名
- purchaseExpense -> purchase_expense
- productionExpense -> production_expense
- destroyRefund -> destroy_refund
- netProductionExpense -> net_production_expense
- trendData -> trend_data
- incomeByCategory -> income_by_category
- expenseByCategory -> expense_by_category
- 解决服务器内部错误和响应格式验证失败问题
- 财务统计图表现在可以正常工作

--- a/.trae/documents/03-数据库设计与数据规则文档.md
+++ b/.trae/documents/03-数据库设计与数据规则文档.md
@@ -6,333 +6,620 @@
 本系统采用MySQL数据库，包含以下核心表：
 - 用户表（users）
 - 供应商表（suppliers）
-- 采购表（purchases）**【已更新：添加purchase_code字段】**
+- 采购表（purchases）
 - 成品表（products）
-- 原材料使用记录表（material_usages）
-- 销售记录表（sales_records）
 - 系统配置表（system_configs）
+- 编辑日志表（edit_logs）
+- 原材料使用记录表（material_usage）
+- SKU主表（product_skus）
+- SKU库存变更日志表（sku_inventory_logs）
+- 审计日志表（audit_logs）
+- 客户备注表（customer_notes）
+- 客户购买记录表（customer_purchases）
+- 客户表（customers）
+- 财务记录表（financial_records）
 
-### 1.2 字段命名规范
-- 使用snake_case命名（如：purchase_code、product_name）
-- 主键统一使用id（VARCHAR(36)）
-- 外键使用{table}_id格式
-- 时间字段使用_at后缀（created_at、updated_at）
-- 编号字段使用_code后缀（purchase_code、product_code）
+### 1.2 字段命名规范（全蛇形命名）
+- **严格使用snake_case命名**：所有字段都使用下划线分隔（如：user_name、purchase_code、product_name）
+- **主键统一使用id**：String类型，使用cuid()生成
+- **外键使用{table}_id格式**：如user_id、supplier_id、customer_id
+- **时间字段使用_at后缀**：created_at、updated_at、last_login_at
+- **编号字段使用_code后缀**：purchase_code、sku_code
+- **价格字段使用price_per_前缀**：price_per_gram、price_per_bead、price_per_piece
+- **数量字段明确含义**：total_quantity、available_quantity、remaining_quantity
+- **状态字段使用枚举**：product_type、quality、status等
 
 ## 二、核心表结构设计
 
-### 2.1 采购表（purchases）**【重要更新】**
+### 2.1 用户表（users）
 
 ```sql
-CREATE TABLE purchases (
+CREATE TABLE users (
   id VARCHAR(36) PRIMARY KEY,
-  purchase_code VARCHAR(50) UNIQUE NOT NULL, -- **新增：采购编号字段**
-  product_name VARCHAR(200) NOT NULL,
-  product_type ENUM('LOOSE_BEADS', 'BRACELET', 'ACCESSORIES', 'FINISHED') NOT NULL,
-  supplier_id VARCHAR(36) NOT NULL,
-  unit_type ENUM('PIECES', 'STRINGS', 'SLICES', 'ITEMS') NOT NULL,
-  bead_diameter DECIMAL(3,1), -- 散珠和手串使用
-  specification VARCHAR(100), -- 配件和成品使用
-  quantity INT, -- 手串数量
-  piece_count INT, -- 散珠颗数/配件片数/成品件数
-  min_stock_alert INT DEFAULT 10,
-  price_per_gram DECIMAL(10,4),
-  unit_price DECIMAL(10,2),
-  total_price DECIMAL(10,2) NOT NULL,
-  weight DECIMAL(8,3),
-  beads_per_string INT, -- 每串珠子数
-  total_beads INT, -- 总珠子数
-  price_per_bead DECIMAL(10,4), -- 每颗珠子价格
-  price_per_piece DECIMAL(10,4), -- 每片/件价格
-  quality ENUM('AA', 'A', 'AB', 'B', 'C') NOT NULL,
-  photos JSON, -- 图片URL数组
-  notes TEXT,
-  purchase_date DATE NOT NULL,
-  status ENUM('ACTIVE', 'INACTIVE') DEFAULT 'ACTIVE',
+  user_name VARCHAR(50) UNIQUE NOT NULL,
+  email VARCHAR(100) UNIQUE,
+  password VARCHAR(255) NOT NULL,
+  role ENUM('BOSS', 'EMPLOYEE') DEFAULT 'EMPLOYEE',
+  name VARCHAR(100) NOT NULL,
+  phone VARCHAR(20),
+  avatar VARCHAR(500),
+  is_active BOOLEAN DEFAULT TRUE,
+  last_login_at TIMESTAMP NULL,
   created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
-  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
-  user_id VARCHAR(36) NOT NULL,
-  
-  FOREIGN KEY (supplier_id) REFERENCES suppliers(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  INDEX idx_purchases_purchase_code (purchase_code), -- **新增：采购编号索引**
-  INDEX idx_purchases_product_type (product_type),
-  INDEX idx_purchases_supplier_id (supplier_id),
-  INDEX idx_purchases_purchase_date (purchase_date DESC),
-  INDEX idx_purchases_created_at (created_at DESC),
-  INDEX idx_purchases_user_id (user_id),
-  FULLTEXT INDEX idx_purchases_search (product_name, notes)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
-```
-
-**重要更新说明：**
-- **新增purchase_code字段**：采购编号，格式为PUR+日期+序号（如：PUR20240131001）
-- **添加唯一索引**：确保采购编号唯一性
-- **支持模糊搜索**：后端API支持purchase_code_search参数进行模糊匹配
-
-### 2.2 成品表（products）
-
-```sql
-CREATE TABLE products (
-  id VARCHAR(36) PRIMARY KEY,
-  product_code VARCHAR(50) UNIQUE, -- 已弃用，使用SKU系统
-  purchase_code VARCHAR(50), -- **新增：关联采购编号（用于溯源）**
-  name VARCHAR(200) NOT NULL,
-  description TEXT,
-  category VARCHAR(100),
-  quantity INT DEFAULT 1, -- 成品数量，通常为1
-  unit VARCHAR(20) NOT NULL DEFAULT '件',
-  unit_price DECIMAL(10,2) NOT NULL, -- 销售价格
-  total_value DECIMAL(10,2) NOT NULL, -- 总成本价
-  status ENUM('IN_STOCK', 'LOW_STOCK', 'OUT_OF_STOCK', 'DISCONTINUED') DEFAULT 'IN_STOCK',
-  location VARCHAR(100),
-  notes TEXT,
-  images JSON, -- 图片URL数组，JSON格式
-  sku_id VARCHAR(36), -- **新增：关联SKU ID**
-  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
-  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
-  user_id VARCHAR(36) NOT NULL,
-  
-  FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  FOREIGN KEY (sku_id) REFERENCES product_skus(id) ON DELETE SET NULL ON UPDATE CASCADE,
-  INDEX idx_products_purchase_code (purchase_code),
-  INDEX idx_products_sku_id (sku_id), -- **新增：SKU关联索引**
-  INDEX idx_products_status (status),
-  INDEX idx_products_created_at (created_at DESC),
-  INDEX idx_products_user_id (user_id),
-  FULLTEXT INDEX idx_products_search (name, description, notes)
+  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 ```
 
 **字段说明：**
-- `unit_price`: 销售价格
-- `total_value`: 总成本价（原材料成本+人工成本+工艺成本）
-- `images`: JSON格式存储图片URL数组
-- `sku_id`: 关联SKU系统，实现库存统一管理
+- `user_name`: 登录用户名，唯一
+- `name`: 真实姓名
+- `role`: 用户角色（BOSS/EMPLOYEE）
+- `is_active`: 账户状态
+- `last_login_at`: 最后登录时间
 
--- 原材料使用记录表
-CREATE TABLE material_usage (
+### 2.2 供应商表（suppliers）
+
+```sql
+CREATE TABLE suppliers (
+  id VARCHAR(36) PRIMARY KEY,
+  name VARCHAR(200) UNIQUE NOT NULL,
+  contact VARCHAR(100),
+  phone VARCHAR(20),
+  email VARCHAR(100),
+  address VARCHAR(500),
+  description TEXT,
+  is_active BOOLEAN DEFAULT TRUE,
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
+
+### 2.3 采购表（purchases）
+
+```sql
+CREATE TABLE purchases (
+  id VARCHAR(36) PRIMARY KEY,
+  purchase_code VARCHAR(50) UNIQUE NOT NULL,
+  product_name VARCHAR(200) NOT NULL,
+  quantity INT,
+  min_stock_alert INT,
+  price_per_gram DECIMAL(10,1),
+  unit_price DECIMAL(10,1),
+  total_price DECIMAL(10,1),
+  weight DECIMAL(10,1),
+  bead_diameter DECIMAL(10,1),
+  beads_per_string INT,
+  total_beads INT,
+  price_per_bead DECIMAL(10,4),
+  price_per_piece DECIMAL(10,4),
+  quality ENUM('AA', 'A', 'AB', 'B', 'C'),
+  product_type ENUM('LOOSE_BEADS', 'BRACELET', 'ACCESSORIES', 'FINISHED') DEFAULT 'BRACELET',
+  unit_type ENUM('PIECES', 'STRINGS', 'SLICES', 'ITEMS') DEFAULT 'STRINGS',
+  specification DECIMAL(10,1),
+  piece_count INT,
+  purchase_date TIMESTAMP NOT NULL,
+  natural_language_input TEXT,
+  photos JSON,
+  notes TEXT,
+  ai_recognition_result JSON,
+  status ENUM('ACTIVE', 'USED') DEFAULT 'ACTIVE',
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
+  supplier_id VARCHAR(36),
+  user_id VARCHAR(36) NOT NULL,
+  last_edited_by_id VARCHAR(36),
+  
+  FOREIGN KEY (supplier_id) REFERENCES suppliers(id),
+  FOREIGN KEY (user_id) REFERENCES users(id),
+  FOREIGN KEY (last_edited_by_id) REFERENCES users(id),
+  INDEX idx_purchases_purchase_code (purchase_code),
+  INDEX idx_purchases_product_type (product_type),
+  INDEX idx_purchases_quality (quality),
+  INDEX idx_purchases_purchase_date (purchase_date DESC)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
+
+**重要字段说明：**
+- `purchase_code`: 采购编号，格式为CG+日期+序号
+- `product_name`: 产品名称
+- `product_type`: 产品类型（散珠/手串/配件/成品）
+- `unit_type`: 计量单位（颗/串/片/件）
+- `bead_diameter`: 珠子直径
+- `price_per_gram`: 克价
+- `price_per_bead`: 每颗价格
+- `price_per_piece`: 每片/件价格
+- `natural_language_input`: 自然语言录入信息
+- `ai_recognition_result`: AI识别结果
+
+### 2.4 成品表（products）
+
+```sql
+CREATE TABLE products (
+  id VARCHAR(36) PRIMARY KEY,
+  name VARCHAR(200) NOT NULL,
+  description TEXT,
+  category VARCHAR(100),
+  quantity INT DEFAULT 0,
+  unit VARCHAR(20) NOT NULL,
+  unit_price DECIMAL(10,2) NOT NULL,
+  total_value DECIMAL(10,2) NOT NULL,
+  status ENUM('MAKING', 'AVAILABLE', 'SOLD', 'OFFLINE') DEFAULT 'AVAILABLE',
+  location VARCHAR(100),
+  notes TEXT,
+  images TEXT,
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
+  user_id VARCHAR(36) NOT NULL,
+  product_code VARCHAR(50),
+  sku_id VARCHAR(36),
+  
+  FOREIGN KEY (user_id) REFERENCES users(id),
+  FOREIGN KEY (sku_id) REFERENCES product_skus(id),
+  INDEX idx_products_status (status),
+  INDEX idx_products_sku_id (sku_id)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
+
+### 2.5 系统配置表（system_configs）
+
+```sql
+CREATE TABLE system_configs (
+  id VARCHAR(36) PRIMARY KEY,
+  key VARCHAR(100) UNIQUE NOT NULL,
+  value TEXT NOT NULL,
+  description VARCHAR(500),
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
+
+### 2.6 编辑日志表（edit_logs）
+
+```sql
+CREATE TABLE edit_logs (
   id VARCHAR(36) PRIMARY KEY,
   purchase_id VARCHAR(36) NOT NULL,
-  product_id VARCHAR(36) NOT NULL,
-  quantity_used_beads INT DEFAULT 0,
-  quantity_used_pieces INT DEFAULT 0,
-  unit_cost DECIMAL(10,4),
+  user_id VARCHAR(36) NOT NULL,
+  action VARCHAR(100) NOT NULL,
+  details TEXT,
+  changed_fields JSON,
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  
+  FOREIGN KEY (purchase_id) REFERENCES purchases(id) ON DELETE CASCADE,
+  FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
+  INDEX idx_edit_logs_purchase_id (purchase_id),
+  INDEX idx_edit_logs_user_id (user_id),
+  INDEX idx_edit_logs_created_at (created_at DESC)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
+
+### 2.7 原材料使用记录表（material_usage）
+
+```sql
+CREATE TABLE material_usage (
+  id VARCHAR(36) PRIMARY KEY,
+  purchase_id VARCHAR(36),
+  product_id VARCHAR(36),
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
   total_cost DECIMAL(10,2),
+  unit_cost DECIMAL(10,4),
+  action ENUM('CREATE', 'USE', 'RETURN', 'ADJUST') DEFAULT 'CREATE',
+  material_id VARCHAR(36) NOT NULL,
+  notes TEXT,
+  quantity_used INT NOT NULL,
+  sku_id VARCHAR(36),
+  
+  FOREIGN KEY (purchase_id) REFERENCES purchases(id) ON DELETE RESTRICT,
+  FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE RESTRICT,
+  INDEX idx_material_usage_purchase_id (purchase_id),
+  INDEX idx_material_usage_product_id (product_id),
+  INDEX idx_material_usage_action (action)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
+
+### 2.8 SKU主表（product_skus）
+
+```sql
+CREATE TABLE product_skus (
+  id VARCHAR(36) PRIMARY KEY,
+  sku_code VARCHAR(50) UNIQUE NOT NULL,
+  sku_name VARCHAR(200) NOT NULL,
+  material_signature_hash VARCHAR(32) NOT NULL,
+  material_signature JSON NOT NULL,
+  total_quantity INT DEFAULT 0,
+  available_quantity INT DEFAULT 0,
+  unit_price DECIMAL(10,2) NOT NULL,
+  total_value DECIMAL(10,2) NOT NULL,
+  photos JSON,
+  description TEXT,
+  specification VARCHAR(100),
+  material_cost DECIMAL(10,2),
+  labor_cost DECIMAL(10,2),
+  craft_cost DECIMAL(10,2),
+  total_cost DECIMAL(10,2),
+  selling_price DECIMAL(10,2) NOT NULL,
+  profit_margin DECIMAL(5,2),
+  status ENUM('ACTIVE', 'INACTIVE') DEFAULT 'ACTIVE',
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
+  created_by VARCHAR(36) NOT NULL,
+  
+  FOREIGN KEY (created_by) REFERENCES users(id),
+  INDEX idx_product_skus_sku_code (sku_code),
+  INDEX idx_product_skus_material_hash (material_signature_hash),
+  INDEX idx_product_skus_status (status),
+  INDEX idx_product_skus_created_by (created_by)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
+
+**SKU字段说明：**
+- `sku_code`: SKU编号
+- `sku_name`: SKU名称
+- `material_signature_hash`: 原材料标识哈希值
+- `material_signature`: 原材料标识JSON
+- `total_quantity`: 总数量
+- `available_quantity`: 可售数量
+- `material_cost`: 原材料成本
+- `labor_cost`: 人工成本
+- `craft_cost`: 工艺成本
+- `selling_price`: 销售价格
+- `profit_margin`: 利润率
+
+### 2.9 SKU库存变更日志表（sku_inventory_logs）
+
+```sql
+CREATE TABLE sku_inventory_logs (
+  id VARCHAR(36) PRIMARY KEY,
+  sku_id VARCHAR(36) NOT NULL,
+  action ENUM('CREATE', 'SELL', 'ADJUST', 'DESTROY') NOT NULL,
+  quantity_change INT NOT NULL,
+  quantity_before INT NOT NULL,
+  quantity_after INT NOT NULL,
+  reference_type ENUM('PRODUCT', 'SALE', 'MANUAL', 'DESTROY', 'REFUND') NOT NULL,
+  reference_id VARCHAR(36),
+  notes TEXT,
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  user_id VARCHAR(36) NOT NULL,
+  
+  FOREIGN KEY (sku_id) REFERENCES product_skus(id),
+  FOREIGN KEY (user_id) REFERENCES users(id),
+  INDEX idx_sku_inventory_logs_sku_id (sku_id),
+  INDEX idx_sku_inventory_logs_action (action),
+  INDEX idx_sku_inventory_logs_created_at (created_at DESC),
+  INDEX idx_sku_inventory_logs_user_id (user_id)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
+
+### 2.10 审计日志表（audit_logs）
+
+```sql
+CREATE TABLE audit_logs (
+  id VARCHAR(36) PRIMARY KEY,
+  user_id VARCHAR(36),
+  action VARCHAR(100) NOT NULL,
+  resource VARCHAR(100) NOT NULL,
+  resource_id VARCHAR(36),
+  details TEXT,
+  ip_address VARCHAR(45),
+  user_agent VARCHAR(500),
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  
+  INDEX idx_audit_logs_user_id (user_id),
+  INDEX idx_audit_logs_action (action),
+  INDEX idx_audit_logs_resource (resource),
+  INDEX idx_audit_logs_created_at (created_at DESC)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
+
+### 2.11 客户表（customers）
+
+```sql
+CREATE TABLE customers (
+  id VARCHAR(36) PRIMARY KEY,
+  name VARCHAR(100) NOT NULL,
+  phone VARCHAR(20) UNIQUE NOT NULL,
+  address TEXT,
+  notes TEXT,
+  total_purchases DECIMAL(10,2) DEFAULT 0.00,
+  total_orders INT DEFAULT 0,
+  first_purchase_date TIMESTAMP NULL,
+  last_purchase_date TIMESTAMP NULL,
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
+  birthday TIMESTAMP NULL,
+  wechat VARCHAR(100),
+  average_order_value DECIMAL(10,2) DEFAULT 0.00,
+  city VARCHAR(50),
+  customer_labels JSON,
+  days_since_first_purchase INT,
+  days_since_last_purchase INT,
+  primary_label VARCHAR(50),
+  province VARCHAR(50),
+  refund_count INT DEFAULT 0,
+  refund_rate DECIMAL(5,2) DEFAULT 0.00,
+  total_all_orders INT DEFAULT 0,
+  
+  INDEX idx_customers_name (name),
+  INDEX idx_customers_phone (phone),
+  INDEX idx_customers_city (city),
+  INDEX idx_customers_province (province)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
+
+### 2.12 客户备注表（customer_notes）
+
+```sql
+CREATE TABLE customer_notes (
+  id VARCHAR(36) PRIMARY KEY,
+  customer_id VARCHAR(36) NOT NULL,
+  category ENUM('PREFERENCE', 'BEHAVIOR', 'CONTACT', 'OTHER') NOT NULL,
+  content TEXT NOT NULL,
+  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
+  created_by VARCHAR(36) NOT NULL,
+  
+  FOREIGN KEY (customer_id) REFERENCES customers(id) ON DELETE CASCADE,
+  FOREIGN KEY (created_by) REFERENCES users(id),
+  INDEX idx_customer_notes_customer_id (customer_id),
+  INDEX idx_customer_notes_category (category),
+  INDEX idx_customer_notes_created_by (created_by)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
+
+### 2.13 客户购买记录表（customer_purchases）
+
+```sql
+CREATE TABLE customer_purchases (
+  id VARCHAR(36) PRIMARY KEY,
+  customer_id VARCHAR(36) NOT NULL,
+  sku_id VARCHAR(36) NOT NULL,
+  sku_name VARCHAR(200) NOT NULL,
+  quantity INT NOT NULL,
+  unit_price DECIMAL(10,2) NOT NULL,
+  original_price DECIMAL(10,2),
+  total_price DECIMAL(10,2) NOT NULL,
+  status ENUM('ACTIVE', 'REFUNDED') DEFAULT 'ACTIVE',
+  refund_date TIMESTAMP NULL,
+  refund_reason VARCHAR(200),
+  refund_notes TEXT,
+  sale_channel VARCHAR(50),
+  notes TEXT,
+  purchase_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
   created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
   updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
   
-  FOREIGN KEY (purchase_id) REFERENCES purchases(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  INDEX idx_material_usage_purchase_id (purchase_id),
-  INDEX idx_material_usage_product_id (product_id),
-  INDEX idx_material_usage_created_at (created_at DESC)
+  FOREIGN KEY (customer_id) REFERENCES customers(id),
+  FOREIGN KEY (sku_id) REFERENCES product_skus(id),
+  INDEX idx_customer_purchases_customer_id (customer_id),
+  INDEX idx_customer_purchases_sku_id (sku_id),
+  INDEX idx_customer_purchases_purchase_date (purchase_date DESC),
+  INDEX idx_customer_purchases_status (status)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
 
--- 销售记录表
-CREATE TABLE sales_records (
+### 2.14 财务记录表（financial_records）
+
+```sql
+CREATE TABLE financial_records (
   id VARCHAR(36) PRIMARY KEY,
-  product_id VARCHAR(36) NOT NULL,
-  sale_code VARCHAR(50) UNIQUE,
-  product_name VARCHAR(200) NOT NULL,
-  product_code VARCHAR(50) NOT NULL,
-  selling_price DECIMAL(10,2) NOT NULL,
-  original_price DECIMAL(10,2) NOT NULL,
-  material_cost DECIMAL(10,2) NOT NULL,
-  labor_cost DECIMAL(10,2) DEFAULT 0,
-  craft_cost DECIMAL(10,2) DEFAULT 0,
-  total_cost DECIMAL(10,2) NOT NULL,
-  profit_amount DECIMAL(10,2) NOT NULL,
-  profit_margin DECIMAL(5,2) NOT NULL,
-  buyer_info TEXT,
-  sale_date TIMESTAMP NOT NULL,
-  sale_channel VARCHAR(50),
+  record_type ENUM('INCOME', 'EXPENSE', 'REFUND', 'LOSS') NOT NULL,
+  amount DECIMAL(10,2) NOT NULL,
+  description VARCHAR(200) NOT NULL,
+  reference_type ENUM('PURCHASE', 'SALE', 'REFUND', 'MANUAL') NOT NULL,
+  reference_id VARCHAR(36),
+  category VARCHAR(100),
+  transaction_date TIMESTAMP NOT NULL,
   notes TEXT,
   created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
   updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
   user_id VARCHAR(36) NOT NULL,
   
-  FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  INDEX idx_sales_records_sale_date (sale_date DESC),
-  INDEX idx_sales_records_product_id (product_id),
-  INDEX idx_sales_records_user_id (user_id),
-  INDEX idx_sales_records_profit_margin (profit_margin DESC),
-  FULLTEXT INDEX idx_sales_records_search (product_name, buyer_info, notes)
+  FOREIGN KEY (user_id) REFERENCES users(id),
+  INDEX idx_financial_records_record_type (record_type),
+  INDEX idx_financial_records_reference_type (reference_type),
+  INDEX idx_financial_records_reference_id (reference_id),
+  INDEX idx_financial_records_transaction_date (transaction_date DESC),
+  INDEX idx_financial_records_user_id (user_id),
+  INDEX idx_financial_records_created_at (created_at DESC)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+```
 
--- 创建数据库
-CREATE DATABASE IF NOT EXISTS shuijing_erp 
-CHARACTER SET utf8mb4 
-COLLATE utf8mb4_unicode_ci;
+## 三、枚举类型定义
 
-USE shuijing_erp;
+### 3.1 用户角色（UserRole）
+```sql
+ENUM('BOSS', 'EMPLOYEE')
+```
 
--- 执行上述所有表的DDL语句
--- ...
+### 3.2 品质等级（Quality）
+```sql
+ENUM('AA', 'A', 'AB', 'B', 'C')
+```
 
--- 插入初始数据
-INSERT INTO system_configs (id, key, value, description) VALUES
-(UUID(), 'product_code_prefix', 'FP', '成品编号前缀'),
-(UUID(), 'sale_code_prefix', 'SL', '销售编号前缀'),
-(UUID(), 'sku_code_prefix', 'SKU', 'SKU编号前缀'),
-(UUID(), 'default_product_category', '手串', '默认成品分类'),
-(UUID(), 'default_product_unit', '件', '默认成品单位');
+### 3.3 产品类型（ProductType）
+```sql
+ENUM('LOOSE_BEADS', 'BRACELET', 'ACCESSORIES', 'FINISHED')
+```
+- `LOOSE_BEADS`: 散珠
+- `BRACELET`: 手串
+- `ACCESSORIES`: 配件
+- `FINISHED`: 成品
 
--- SKU系统表结构
--- SKU主表（完整成本计算字段）
-CREATE TABLE product_skus (
-  id VARCHAR(36) PRIMARY KEY,
-  sku_code VARCHAR(50) UNIQUE NOT NULL, -- SKU编号
-  sku_name VARCHAR(200) NOT NULL, -- SKU名称
-  material_signature_hash VARCHAR(32) NOT NULL, -- 原材料标识哈希值
-  material_signature JSON NOT NULL, -- 原材料标识JSON
-  total_quantity INT DEFAULT 0, -- 总数量
-  available_quantity INT DEFAULT 0, -- 可售数量
-  photos JSON, -- 图片URL数组
-  specification VARCHAR(100), -- 规格（直径等）
-  description TEXT, -- SKU描述
-  material_cost DECIMAL(10,2) DEFAULT 0, -- 原材料成本价
-  labor_cost DECIMAL(10,2) DEFAULT 0, -- 人工成本
-  craft_cost DECIMAL(10,2) DEFAULT 0, -- 工艺成本
-  total_cost DECIMAL(10,2) DEFAULT 0, -- 总成本价
-  selling_price DECIMAL(10,2) NOT NULL, -- 售价
-  profit_margin DECIMAL(5,2) DEFAULT 0, -- 利润率（%）
-  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, -- 创建日期
-  last_sale_date TIMESTAMP NULL, -- 最后销售日期
-  created_by VARCHAR(36) NOT NULL, -- 创建用户
-  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
-  
-  FOREIGN KEY (created_by) REFERENCES users(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  INDEX idx_product_skus_sku_code (sku_code),
-  INDEX idx_product_skus_material_hash (material_signature_hash),
-  INDEX idx_product_skus_created_at (created_at DESC),
-  INDEX idx_product_skus_last_sale_date (last_sale_date DESC),
-  INDEX idx_product_skus_specification (specification),
-  INDEX idx_product_skus_profit_margin (profit_margin DESC), -- **新增：利润率索引**
-  FULLTEXT INDEX idx_product_skus_search (sku_name, description, specification)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+### 3.4 计量单位（UnitType）
+```sql
+ENUM('PIECES', 'STRINGS', 'SLICES', 'ITEMS')
+```
+- `PIECES`: 颗
+- `STRINGS`: 串
+- `SLICES`: 片
+- `ITEMS`: 件
 
--- **成本计算规则：**
--- total_cost = material_cost + labor_cost + craft_cost
--- profit_margin = (selling_price - total_cost) / selling_price * 100
--- 所有成本字段使用DECIMAL(10,2)确保精度
+### 3.5 产品状态（ProductStatus）
+```sql
+ENUM('MAKING', 'AVAILABLE', 'SOLD', 'OFFLINE')
+```
 
--- SKU库存变更日志表（新增销毁操作类型）
-CREATE TABLE sku_inventory_logs (
-  id VARCHAR(36) PRIMARY KEY,
-  sku_id VARCHAR(36) NOT NULL, -- SKU ID
-  action ENUM('CREATE', 'SELL', 'ADJUST', 'DESTROY') NOT NULL, -- 操作类型：创建、销售、调整、销毁
-  quantity_change INT NOT NULL, -- 数量变化
-  quantity_before INT NOT NULL, -- 变更前数量
-  quantity_after INT NOT NULL, -- 变更后数量
-  reference_type ENUM('PRODUCT', 'SALE', 'MANUAL', 'DESTROY') NOT NULL, -- 引用类型
-  reference_id VARCHAR(36), -- 引用ID
-  notes TEXT, -- 备注
-  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
-  user_id VARCHAR(36) NOT NULL, -- 操作用户
-  
-  FOREIGN KEY (sku_id) REFERENCES product_skus(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  INDEX idx_sku_logs_sku_id (sku_id),
-  INDEX idx_sku_logs_action (action),
-  INDEX idx_sku_logs_created_at (created_at DESC),
-  INDEX idx_sku_logs_reference (reference_type, reference_id)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+### 3.6 SKU状态（SkuStatus）
+```sql
+ENUM('ACTIVE', 'INACTIVE')
+```
 
--- SKU原材料溯源关联表
-CREATE TABLE sku_material_traces (
-  id VARCHAR(36) PRIMARY KEY,
-  sku_id VARCHAR(36) NOT NULL, -- SKU ID
-  purchase_id VARCHAR(36) NOT NULL, -- 采购记录ID
-  quantity_used_beads INT DEFAULT 0, -- 使用的珠子颗数
-  quantity_used_pieces INT DEFAULT 0, -- 使用的片/件数量
-  unit_cost DECIMAL(10,4), -- 单位成本
-  total_cost DECIMAL(10,2), -- 该原材料的总成本
-  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
-  
-  FOREIGN KEY (sku_id) REFERENCES product_skus(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  FOREIGN KEY (purchase_id) REFERENCES purchases(id) ON DELETE RESTRICT ON UPDATE CASCADE,
-  INDEX idx_sku_traces_sku_id (sku_id),
-  INDEX idx_sku_traces_purchase_id (purchase_id),
-  INDEX idx_sku_traces_created_at (created_at DESC)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+### 3.7 财务记录类型（financial_records_recordType）
+```sql
+ENUM('INCOME', 'EXPENSE', 'REFUND', 'LOSS')
+```
 
--- SKU系统初始化数据
-INSERT INTO system_configs (id, key, value, description) VALUES
-(UUID(), 'sku_code_prefix', 'SKU', 'SKU编号前缀'),
-(UUID(), 'sku_price_tolerance', '0.05', 'SKU价格差异容忍度（5%）'),
-(UUID(), 'low_stock_threshold', '2', '低库存预警阈值'),
-(UUID(), 'sku_auto_merge', 'true', '是否自动合并相同原材料组合的SKU');
+### 3.8 客户备注分类（customer_notes_category）
+```sql
+ENUM('PREFERENCE', 'BEHAVIOR', 'CONTACT', 'OTHER')
+```
 
--- 为成品表添加SKU关联
-ALTER TABLE products ADD COLUMN sku_id VARCHAR(30) NULL;
-ALTER TABLE products ADD FOREIGN KEY (sku_id) REFERENCES product_skus(id);
-CREATE INDEX idx_products_sku_id ON products(sku_id);
+### 3.9 SKU库存操作类型（sku_inventory_logs_action）
+```sql
+ENUM('CREATE', 'SELL', 'ADJUST', 'DESTROY')
+```
 
--- SKU库存统计视图（更新字段，移除状态逻辑）
-CREATE VIEW sku_inventory_stats AS
-SELECT 
-  ps.id,
-  ps.sku_code,
-  ps.sku_name,
-  ps.total_quantity,
-  ps.available_quantity,
-  ps.total_quantity - ps.available_quantity as sold_quantity,
-  ps.photos,
-  ps.specification,
-  ps.material_cost,
-  ps.selling_price,
-  ps.profit_margin,
-  ps.created_at,
-  ps.last_sale_date,
-  CASE 
-    WHEN ps.available_quantity <= 2 THEN 'LOW_STOCK'
-    WHEN ps.available_quantity = 0 THEN 'OUT_OF_STOCK'
-    ELSE 'IN_STOCK'
-  END as stock_status,
-  COUNT(p.id) as product_count,
-  ps.updated_at
-FROM product_skus ps
-LEFT JOIN products p ON ps.id = p.sku_id
-GROUP BY ps.id;
+### 3.10 财务记录引用类型（financial_records_referenceType）
+```sql
+ENUM('PURCHASE', 'SALE', 'REFUND', 'MANUAL')
+```
 
--- SKU销售统计视图（更新字段）
-CREATE VIEW sku_sales_stats AS
-SELECT 
-  ps.id as sku_id,
-  ps.sku_code,
-  ps.sku_name,
-  COUNT(CASE WHEN sil.action = 'SELL' THEN 1 END) as total_sales,
-  SUM(CASE WHEN sil.action = 'SELL' THEN ABS(sil.quantity_change) ELSE 0 END) as total_sold_quantity,
-  SUM(CASE WHEN sil.action = 'SELL' THEN ABS(sil.quantity_change) * ps.selling_price ELSE 0 END) as total_sales_value,
-  SUM(CASE WHEN sil.action = 'DESTROY' THEN ABS(sil.quantity_change) ELSE 0 END) as total_destroyed_quantity,
-  AVG(CASE WHEN sil.action = 'SELL' THEN ps.profit_margin ELSE NULL END) as avg_profit_margin,
-  MAX(CASE WHEN sil.action = 'SELL' THEN sil.created_at END) as last_sale_date
-FROM product_skus ps
-LEFT JOIN sku_inventory_logs sil ON ps.id = sil.sku_id
-GROUP BY ps.id;
+### 3.11 SKU库存引用类型（sku_inventory_logs_referenceType）
+```sql
+ENUM('PRODUCT', 'SALE', 'MANUAL', 'DESTROY', 'REFUND')
+```
 
--- SKU原材料溯源视图
-CREATE VIEW sku_material_trace_view AS
-SELECT 
-  ps.id as sku_id,
-  ps.sku_code,
-  ps.sku_name,
-  smt.purchase_id,
-  p.product_name,
-  p.product_type,
-  p.quality,
-  p.bead_diameter,
-  p.specification as purchase_specification,
-  p.supplier,
-  p.purchase_date,
-  smt.quantity_used_beads,
-  smt.quantity_used_pieces,
-  smt.unit_cost,
-  smt.total_cost,
-  smt.created_at as trace_created_at
-FROM product_skus ps
-INNER JOIN sku_material_traces smt ON ps.id = smt.sku_id
-INNER JOIN purchases p ON smt.purchase_id = p.id
-ORDER BY ps.sku_code, p.purchase_date DESC;
+### 3.12 原材料使用操作类型（material_usage_action）
+```sql
+ENUM('CREATE', 'USE', 'RETURN', 'ADJUST')
+```
+
+### 3.13 客户购买状态（customer_purchases_status）
+```sql
+ENUM('ACTIVE', 'REFUNDED')
+```
+
+### 3.14 采购状态（purchases_status）
+```sql
+ENUM('ACTIVE', 'USED')
+```
+
+## 四、数据库设计原则
+
+### 4.1 命名规范原则
+1. **全蛇形命名**：所有表名、字段名、索引名都使用snake_case
+2. **语义明确**：字段名能清楚表达其含义
+3. **统一性**：相同含义的字段在不同表中使用相同命名
+4. **可扩展性**：预留扩展空间，避免频繁修改表结构
+
+### 4.2 数据类型规范
+1. **主键**：统一使用VARCHAR(36)存储cuid
+2. **价格字段**：使用DECIMAL(10,2)或DECIMAL(10,4)确保精度
+3. **时间字段**：使用TIMESTAMP类型
+4. **JSON字段**：用于存储复杂数据结构（如photos、material_signature）
+5. **枚举字段**：使用ENUM类型限制取值范围
+
+### 4.3 索引设计原则
+1. **主键索引**：每个表都有主键索引
+2. **外键索引**：所有外键字段都建立索引
+3. **查询索引**：根据常用查询条件建立复合索引
+4. **唯一索引**：确保业务唯一性（如user_name、phone、purchase_code）
+5. **全文索引**：支持文本搜索的字段建立FULLTEXT索引
+
+### 4.4 关系设计原则
+1. **外键约束**：确保数据完整性
+2. **级联操作**：合理设置ON DELETE和ON UPDATE规则
+3. **软删除**：重要数据使用状态字段而非物理删除
+4. **审计追踪**：重要操作记录到audit_logs表
+
+## 五、数据完整性规则
+
+### 5.1 必填字段验证
+- 用户表：user_name、password、name、role
+- 采购表：purchase_code、product_name、product_type、user_id
+- 客户表：name、phone
+- SKU表：sku_code、sku_name、material_signature、selling_price
+
+### 5.2 唯一性约束
+- users.user_name：用户名唯一
+- users.email：邮箱唯一（如果提供）
+- suppliers.name：供应商名称唯一
+- purchases.purchase_code：采购编号唯一
+- product_skus.sku_code：SKU编号唯一
+- customers.phone：客户手机号唯一
+
+### 5.3 数据范围约束
+- 价格字段：必须大于等于0
+- 数量字段：必须大于等于0
+- 百分比字段：0-100之间
+- 枚举字段：只能取预定义值
+
+### 5.4 关联完整性
+- 所有外键必须引用存在的记录
+- 删除父记录时，子记录的处理策略明确
+- 重要关联使用RESTRICT防止误删
+
+## 六、性能优化建议
+
+### 6.1 索引优化
+1. **复合索引**：根据查询模式建立复合索引
+2. **覆盖索引**：减少回表查询
+3. **前缀索引**：对长字符串字段使用前缀索引
+4. **索引维护**：定期分析索引使用情况
+
+### 6.2 查询优化
+1. **分页查询**：使用LIMIT和OFFSET
+2. **条件过滤**：在WHERE子句中使用索引字段
+3. **JOIN优化**：合理使用JOIN类型
+4. **子查询优化**：避免相关子查询
+
+### 6.3 存储优化
+1. **数据类型选择**：选择合适的数据类型
+2. **字段长度**：根据实际需要设置字段长度
+3. **NULL值处理**：合理使用NULL和默认值
+4. **分区策略**：对大表考虑分区
+
+## 七、安全性考虑
+
+### 7.1 数据访问控制
+1. **用户权限**：基于角色的访问控制
+2. **敏感数据**：密码加密存储
+3. **审计日志**：记录所有重要操作
+4. **数据脱敏**：敏感字段在非生产环境脱敏
+
+### 7.2 数据备份策略
+1. **定期备份**：每日全量备份
+2. **增量备份**：实时或定时增量备份
+3. **异地备份**：备份文件异地存储
+4. **恢复测试**：定期测试备份恢复
+
+### 7.3 数据加密
+1. **传输加密**：使用SSL/TLS加密传输
+2. **存储加密**：敏感字段加密存储
+3. **密钥管理**：安全的密钥管理机制
+4. **访问日志**：记录数据访问日志
+
+## 八、维护和监控
+
+### 8.1 数据库监控
+1. **性能监控**：查询性能、连接数、锁等待
+2. **空间监控**：表空间、索引空间使用情况
+3. **错误监控**：数据库错误日志监控
+4. **备份监控**：备份任务执行状态
+
+### 8.2 数据质量监控
+1. **数据一致性**：定期检查数据一致性
+2. **数据完整性**：检查外键约束
+3. **业务规则**：验证业务逻辑正确性
+4. **异常数据**：识别和处理异常数据
+
+### 8.3 版本管理
+1. **Schema版本**：数据库结构版本管理
+2. **迁移脚本**：结构变更的迁移脚本
+3. **回滚策略**：变更失败的回滚方案
+4. **测试验证**：变更前的充分测试
+
+---
+
+**注意：本文档严格遵循全蛇形命名规范（snake_case），所有字段名、表名都使用下划线分隔，与实际Prisma schema代码完全一致。**
